--- a/style.css
+++ b/style.css
@@ -26,14 +26,14 @@ body{
     display: flex;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.452);
-    margin-top: 10vh;
+    margin-top: 5vh;
     padding: 10px;
 }
 .logo{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width:max(100px);
+    width: clamp(10%, 5vw, 40%);
     background-size: contain;
     background-repeat: no-repeat;
     border-radius: 100px;
@@ -44,38 +44,49 @@ body{
 .logo>img{
     filter: invert(100%);
 }
+.title-hero>p{
+    color: aliceblue;
+    font-family: crossorigin;
+    font-weight: normal;
+    font-size: clamp(1px, 5vw, 100px);
+}
 .title-hero{
-    width: 100%;
     align-items: center;
     justify-content: center;
     padding: 2%;
-    font-size: 40px;
-    color: aliceblue;
     text-align: center;
-    font-family: crossorigin;
-    font-weight: normal;
-    font-size: clamp(40px, (1rem + 5vw), 100px);
+
 }
 
 /* Content container(right side) */
 .content-container{
+    min-height: 10px;
     display: flex;
     flex-direction: column;
+    height: 100vh;
     width: 100vw;
     background-color:blanchedalmond;
 }
 .content-text{
+    flex: 0 9 auto;
     margin-left: 5vw;
+    margin-bottom: clamp(1px,2vh,3vh);
+    margin-top: clamp(1px,1vh,20px);
+    max-height: 50vh;
+}
+
+.content-text>p{
+
     font-family:var(--system-ui);
     font-weight: 600;
-    font-size: clamp(10px, calc(14px + 3vw), 20px);
-    margin-left:5vh;
-    margin-bottom: 5vh;
-    margin-top:8vh;
+    font-size: clamp(1px, 2vh, 100px);
+    text
 }
 
 /* Form stylings */
 .form-container{
+
+    flex: 2 0 auto;
     display: flex;
     flex-direction: column;
     background-color: whitesmoke;
@@ -92,15 +103,15 @@ fieldset{
 
 .input>label{
     display: block;
-    font-size: 10px;
+    font-size: clamp(10px, (1vh), 5vh);
     font-weight: 600;
     color: #0000009c;
 }
 input{
+    width: clamp(10px, 200px, 200px);
     border:2px solid rgba(109, 109, 109, 0.274);
     border-radius: 5px;
-    font-size: 20px;
-    padding: 5px;
+    font-size: clamp(10px, (2.5vh), 5vh);
     outline: none;
     transition: 200ms ease-in-out;
 }
@@ -114,6 +125,7 @@ input:invalid{
 
 /* For submit button */
 .content-bottom{
+    flex: 1 1 auto;
     margin-left:5%;
 
 }
