--- a/style.css
+++ b/style.css
@@ -122,6 +122,17 @@ input:invalid{
     border-color: red;
 }
 
+/* Error styling */
+.error{
+    border-color:red;
+    box-shadow: 0 1px 3px 0 red, 0 1px 3px 0 red;
+}
+#errMsg{
+    color: red;
+    font-size: small;
+    margin: 0;
+}
+
 
 /* For submit button */
 .content-bottom{
@@ -136,6 +147,15 @@ button{
     padding: 10px;
     border: 1px solid green;
     border-radius: 5px;
+    transition: 200ms ease-in-out;
+}
+button:hover{
+    background-color: aquamarine;
+    color: black;
+}
+button:active{
+    background-color: darkolivegreen;
+    color: aliceblue;
 }
 
 /* Credits for the image */
